third_party/move/move-compiler-v2/tests/checking/error_context/return.exp

Diagnostics:
error: cannot return `bool` from a function with result type `u64`
  ┌─ tests/checking/error_context/return.move:4:9
  │
4 │         true
  │         ^^^^

error: cannot return `bool` from a function with result type `u64`
  ┌─ tests/checking/error_context/return.move:8:23
  │
8 │         if (c) return false;
  │                       ^^^^^

error: cannot return `integer` from a function which returns nothing
   ┌─ tests/checking/error_context/return.move:13:9
   │
13 │         1
   │         ^

error: cannot return `bool` from a function which returns nothing
   ┌─ tests/checking/error_context/return.move:17:23
   │
17 │         if (c) return true;
   │                       ^^^^

error: cannot return nothing from a function with result type `bool`
   ┌─ tests/checking/error_context/return.move:20:26
   │
20 │       fun return_5(): bool {
   │ ╭──────────────────────────^
21 │ │     }
   │ ╰─────^

error: cannot return `&u64` from a function with result type `&mut u64` (mutability mismatch)
   ┌─ tests/checking/error_context/return.move:24:9
   │
24 │         r
   │         ^
